# tambourine

./: .gitignore  Alicefile.run  Cargo.toml  README.md  go.mod  go.sum  logger.go  tambourine.go
cmd/: main.go
extensions/: README.md
extensions/milkshake/: .gitignore  CMakeLists.txt  README.md  configure  init.Makefile  milkshake.c
extensions/panda/: CMakeLists.txt  configure  init.Makefile  panda.c
proto/: io.proto
src/: main.rs
src/bombshell/: Cargo.toml  build.rs
src/bombshell/src/: bombshell.rs
