[package]
name = "bombshell"
version = "0.1.0"
authors = ["Kris Nóva <kris@nivenly.com>"]
edition = "2018"

##
# [Server] The bombshell server executable
[[bin]]
name = "bombshell"
path = "src/bombshell.rs"

##
# [Client] The official rust client
[[bin]]
name = "client-rust"
path = "src/client.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.4"